<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.grocerieslist.grocerieslist.GroceryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:gravity="center"
        >

    <EditText
        android:id="@+id/new_item"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:inputType="textAutoCorrect"
        android:hint="Add new Item"
        android:imeOptions="actionSend"/>

    <Button
        android:id="@+id/new_item_button"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:onClick="addItemToDatabase"
        android:text="+"/>

        <Button
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="sendEmail"
            android:text="Email the list"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
