<resources>
    <string name="app_name">Reminder and notes</string>
    <string name="groceries_button">Add Groceries</string>
    <string name="first_line_email">List of Items:</string>
    <string name="options_menu">Options</string>
    <string name="email_address_title">Email Address</string>
    <string name="default_email">bob@example.com</string>
    <string name="color_blue">Blue</string>
    <string name="color_fushia">Fushia</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_random">Random</string>
    <string name="color_blue_value">blue</string>
    <string name="color_fushia_value">fushia</string>
    <string name="color_green_value">green</string>
    <string name="color_yellow_value">yellow</string>
    <string name="color_random_value">random</string>
    <string name="list_color_selection_title">Select the color for the list:</string>
</resources>
